DataFrame.cols(..).op(..): transformation over a subset of columns #212
cols(..).selectRename()